Fix dark mode styling issues

--- a/src/components/controls/toggle/toggle.scss
+++ b/src/components/controls/toggle/toggle.scss
@@ -16,3 +16,13 @@
 		background-color: rgba(0, 0, 0, 0.06);
 	}
 }
+
+@media (prefers-color-scheme: dark) {
+	.toggle {
+		color: rgba(255, 255, 255, 0.88);
+
+		&:hover {
+			background-color: rgba(250, 250, 250, 0.3);
+		}
+	}
+}
